[project]
name = "multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncmy>=0.2.10",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "filelock>=3.20.2",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "neo4j>=6.0.3",
    "omegaconf>=2.3.0",
    "openai>=2.14.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "tenacity>=9.1.2",
]
